fix issue regarding jwt token logs and solve the frontend-backend connection on cloud